# LibCommon

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  dewfile.json
MacFilesystem/: filesystem  filesystem_common.h  operations.cpp
Source/: LibCommon.pro
Source/Common/: BasicTypes.h  CAssetID.cpp  CAssetID.h  CColor.cpp  CColor.h  CFourCC.h  CRandom.cpp  CRandom.h  CScopedTimer.h  CTimer.cpp  CTimer.h  Common.h  Common.pro  EGame.cpp  EGame.h  EKeyInputs.h  EMouseInputs.h  EnumReflection.h  FileIO.h  FileUtil.cpp  FileUtil.h  Flags.h  LinkedList.h  Log.cpp  Log.h  Macros.h  NBasics.h  TString.cpp  TString.h
Source/Common/FileIO/: CBitStreamInWrapper.cpp  CBitStreamInWrapper.h  CFileInStream.cpp  CFileInStream.h  CFileLock.h  CFileOutStream.cpp  CFileOutStream.h  CMemoryInStream.cpp  CMemoryInStream.h  CMemoryOutStream.cpp  CMemoryOutStream.h  CVectorOutStream.cpp  CVectorOutStream.h  IInputStream.cpp  IInputStream.h  IOUtil.cpp  IOUtil.h  IOutputStream.cpp  IOutputStream.h
Source/Common/Hash/: CCRC32.cpp  CCRC32.h  CFNV1A.h
Source/Common/Math/: CAABox.cpp  CAABox.h  CFrustumPlanes.cpp  CFrustumPlanes.h  CMatrix4f.cpp  CMatrix4f.h  CPlane.h  CQuaternion.cpp  CQuaternion.h  CRay.h  CTransform4f.cpp  CTransform4f.h  CVector2f.cpp  CVector2f.h  CVector2i.cpp  CVector2i.h  CVector3f.cpp  CVector3f.h  CVector4f.cpp  CVector4f.h  EAxis.h  ETransformSpace.h  MathUtil.cpp  MathUtil.h  NConvexHull.cpp  NConvexHull.h
Source/Common/Serialization/: CBasicBinaryReader.h  CBasicBinaryWriter.h  CBinaryReader.h  CBinaryWriter.h  CSerialVersion.cpp  CSerialVersion.h  CXMLReader.h  CXMLWriter.h  IArchive.h  XMLCommon.h
